--- a/index.html
+++ b/index.html
@@ -482,70 +482,70 @@
 
     <script>
       const TEAMS = [
-        { name: "Spanyolország", code: "ES", flag: "🇪🇸", rank: 1 },
-        { name: "Argentína", code: "AR", flag: "🇦🇷", rank: 2 },
-        { name: "Franciaország", code: "FR", flag: "🇫🇷", rank: 3 },
+        { name: "Spanyolország", code: "ESP", flag: "🇪🇸", rank: 1 },
+        { name: "Argentína", code: "ARG", flag: "🇦🇷", rank: 2 },
+        { name: "Franciaország", code: "FRA", flag: "🇫🇷", rank: 3 },
         { name: "Anglia", code: "ENG", flag: "🏴󠁧󠁢󠁥󠁮󠁧󠁿", rank: 4 },
-        { name: "Brazília", code: "BR", flag: "🇧🇷", rank: 5 },
-        { name: "Portugália", code: "PT", flag: "🇵🇹", rank: 6 },
-        { name: "Hollandia", code: "NL", flag: "🇳🇱", rank: 7 },
-        { name: "Marokkó", code: "MA", flag: "🇲🇦", rank: 8 },
-        { name: "Belgium", code: "BE", flag: "🇧🇪", rank: 9 },
-        { name: "Németország", code: "DE", flag: "🇩🇪", rank: 10 },
-        { name: "Horvátország", code: "HR", flag: "🇭🇷", rank: 11 },
-        { name: "Szenegál", code: "SN", flag: "🇸🇳", rank: 12 },
-        { name: "Kolumbia", code: "CO", flag: "🇨🇴", rank: 13 },
-        { name: "Uruguay", code: "UY", flag: "🇺🇾", rank: 14 },
-        { name: "USA", code: "US", flag: "🇺🇸", rank: 15 },
-        { name: "Mexikó", code: "MX", flag: "🇲🇽", rank: 16 },
-        { name: "Olaszország", code: "IT", flag: "🇮🇹", rank: 17 },
-        { name: "Svájc", code: "CH", flag: "🇨🇭", rank: 18 },
-        { name: "Japán", code: "JP", flag: "🇯🇵", rank: 19 },
-        { name: "Irán", code: "IR", flag: "🇮🇷", rank: 20 },
-        { name: "Dánia", code: "DK", flag: "🇩🇰", rank: 21 },
-        { name: "Dél-Korea", code: "KR", flag: "🇰🇷", rank: 22 },
-        { name: "Ecuador", code: "EC", flag: "🇪🇨", rank: 23 },
-        { name: "Ausztria", code: "AT", flag: "🇦🇹", rank: 24 },
-        { name: "Törökország", code: "TR", flag: "🇹🇷", rank: 25 },
-        { name: "Ausztrália", code: "AU", flag: "🇦🇺", rank: 26 },
-        { name: "Ukrajna", code: "UA", flag: "🇺🇦", rank: 27 },
-        { name: "Norvégia", code: "NO", flag: "🇳🇴", rank: 28 },
-        { name: "Panama", code: "PA", flag: "🇵🇦", rank: 29 },
-        { name: "Lengyelország", code: "PL", flag: "🇵🇱", rank: 30 },
-        { name: "Wales", code: "WL", flag: "🏴󠁧󠁢󠁷󠁬󠁳󠁿", rank: 31 },
-        { name: "Egyiptom", code: "EG", flag: "🇪🇬", rank: 32 },
-        { name: "Algéria", code: "DZ", flag: "🇩🇿", rank: 33 },
-        { name: "Skócia", code: "SC", flag: "🏴󠁧󠁢󠁳󠁣󠁴󠁿", rank: 34 },
-        { name: "Szerbia", code: "RS", flag: "🇷🇸", rank: 35 },
-        { name: "Nigéria", code: "NG", flag: "🇳🇬", rank: 36 },
-        { name: "Paraguay", code: "PY", flag: "🇵🇾", rank: 37 },
-        { name: "Tunézia", code: "TN", flag: "🇹🇳", rank: 38 },
-        { name: "Magyarország", code: "HU", flag: "🇭🇺", rank: 39 },
-        { name: "Elefántcsontpart", code: "CI", flag: "🇨🇮", rank: 40 },
-        { name: "Svédország", code: "SE", flag: "🇸🇪", rank: 41 },
-        { name: "Csehország", code: "CZ", flag: "🇨🇿", rank: 42 },
-        { name: "Szlovákia", code: "SK", flag: "🇸🇰", rank: 43 },
-        { name: "Görögország", code: "GR", flag: "🇬🇷", rank: 44 },
-        { name: "Románia", code: "RO", flag: "🇷🇴", rank: 45 },
-        { name: "Venezuela", code: "VE", flag: "🇻🇪", rank: 46 },
-        { name: "Üzbegisztán", code: "UZ", flag: "🇺🇿", rank: 47 },
-        { name: "Katar", code: "QA", flag: "🇶🇦", rank: 48 },
-        { name: "Szaúd-Arábia", code: "SA", flag: "🇸🇦", rank: 49 },
-        { name: "Dél-Afrika", code: "ZA", flag: "🇿🇦", rank: 50 },
-        { name: "Szlovénia", code: "SI", flag: "🇸🇮", rank: 51 },
-        { name: "Albánia", code: "AL", flag: "🇦🇱", rank: 52 },
-        { name: "Írország", code: "IE", flag: "🇮🇪", rank: 53 },
-        { name: "Kamerun", code: "CM", flag: "🇨🇲", rank: 54 },
-        { name: "Irak", code: "IQ", flag: "🇮🇶", rank: 55 },
-        { name: "Bosznia", code: "BA", flag: "🇧🇦", rank: 56 },
-        { name: "Grúzia", code: "GE", flag: "🇬🇪", rank: 57 },
-        { name: "Izland", code: "IS", flag: "🇮🇸", rank: 58 },
-        { name: "Finnország", code: "FI", flag: "🇫🇮", rank: 59 },
-        { name: "Ghána", code: "GH", flag: "🇬🇭", rank: 60 },
+        { name: "Brazília", code: "BRA", flag: "🇧🇷", rank: 5 },
+        { name: "Portugália", code: "POR", flag: "🇵🇹", rank: 6 },
+        { name: "Hollandia", code: "NED", flag: "🇳🇱", rank: 7 },
+        { name: "Marokkó", code: "MAR", flag: "🇲🇦", rank: 8 },
+        { name: "Belgium", code: "BEL", flag: "🇧🇪", rank: 9 },
+        { name: "Németország", code: "GER", flag: "🇩🇪", rank: 10 },
+        { name: "Horvátország", code: "CRO", flag: "🇭🇷", rank: 11 },
+        { name: "Szenegál", code: "SEN", flag: "🇸🇳", rank: 12 },
+        { name: "Kolumbia", code: "COL", flag: "🇨🇴", rank: 13 },
+        { name: "Uruguay", code: "URU", flag: "🇺🇾", rank: 14 },
+        { name: "USA", code: "USA", flag: "🇺🇸", rank: 15 },
+        { name: "Mexikó", code: "MEX", flag: "🇲🇽", rank: 16 },
+        { name: "Olaszország", code: "ITA", flag: "🇮🇹", rank: 17 },
+        { name: "Svájc", code: "SWI", flag: "🇨🇭", rank: 18 },
+        { name: "Japán", code: "JAP", flag: "🇯🇵", rank: 19 },
+        { name: "Irán", code: "IRA", flag: "🇮🇷", rank: 20 },
+        { name: "Dánia", code: "DEN", flag: "🇩🇰", rank: 21 },
+        { name: "Dél-Korea", code: "KOR", flag: "🇰🇷", rank: 22 },
+        { name: "Ecuador", code: "ECU", flag: "🇪🇨", rank: 23 },
+        { name: "Ausztria", code: "AUS", flag: "🇦🇹", rank: 24 },
+        { name: "Törökország", code: "TUR", flag: "🇹🇷", rank: 25 },
+        { name: "Ausztrália", code: "AUS", flag: "🇦🇺", rank: 26 },
+        { name: "Ukrajna", code: "UKR", flag: "🇺🇦", rank: 27 },
+        { name: "Norvégia", code: "NOR", flag: "🇳🇴", rank: 28 },
+        { name: "Panama", code: "PAN", flag: "🇵🇦", rank: 29 },
+        { name: "Lengyelország", code: "POL", flag: "🇵🇱", rank: 30 },
+        { name: "Wales", code: "WAL", flag: "🏴󠁧󠁢󠁷󠁬󠁳󠁿", rank: 31 },
+        { name: "Egyiptom", code: "EGY", flag: "🇪🇬", rank: 32 },
+        { name: "Algéria", code: "ALG", flag: "🇩🇿", rank: 33 },
+        { name: "Skócia", code: "SCO", flag: "🏴󠁧󠁢󠁳󠁣󠁴󠁿", rank: 34 },
+        { name: "Szerbia", code: "SRB", flag: "🇷🇸", rank: 35 },
+        { name: "Nigéria", code: "NIG", flag: "🇳🇬", rank: 36 },
+        { name: "Paraguay", code: "PAR", flag: "🇵🇾", rank: 37 },
+        { name: "Tunézia", code: "TUN", flag: "🇹🇳", rank: 38 },
+        { name: "Magyarország", code: "HUN", flag: "🇭🇺", rank: 39 },
+        { name: "Elefántcsontpart", code: "CDI", flag: "🇨🇮", rank: 40 },
+        { name: "Svédország", code: "SWE", flag: "🇸🇪", rank: 41 },
+        { name: "Csehország", code: "CZE", flag: "🇨🇿", rank: 42 },
+        { name: "Szlovákia", code: "SVK", flag: "🇸🇰", rank: 43 },
+        { name: "Görögország", code: "GRE", flag: "🇬🇷", rank: 44 },
+        { name: "Románia", code: "ROM", flag: "🇷🇴", rank: 45 },
+        { name: "Venezuela", code: "VEN", flag: "🇻🇪", rank: 46 },
+        { name: "Üzbegisztán", code: "UZB", flag: "🇺🇿", rank: 47 },
+        { name: "Katar", code: "QAT", flag: "🇶🇦", rank: 48 },
+        { name: "Szaúd-Arábia", code: "SAR", flag: "🇸🇦", rank: 49 },
+        { name: "Dél-Afrika", code: "SOA", flag: "🇿🇦", rank: 50 },
+        { name: "Szlovénia", code: "SLO", flag: "🇸🇮", rank: 51 },
+        { name: "Albánia", code: "ALB", flag: "🇦🇱", rank: 52 },
+        { name: "Írország", code: "IRE", flag: "🇮🇪", rank: 53 },
+        { name: "Kamerun", code: "CAM", flag: "🇨🇲", rank: 54 },
+        { name: "Irak", code: "IRQ", flag: "🇮🇶", rank: 55 },
+        { name: "Bosznia", code: "BAZ", flag: "🇧🇦", rank: 56 },
+        { name: "Grúzia", code: "GEO", flag: "🇬🇪", rank: 57 },
+        { name: "Izland", code: "ICE", flag: "🇮🇸", rank: 58 },
+        { name: "Finnország", code: "FIN", flag: "🇫🇮", rank: 59 },
+        { name: "Ghána", code: "GHA", flag: "🇬🇭", rank: 60 },
         { name: "Mali", code: "ML", flag: "🇲🇱", rank: 61 },
-        { name: "Kongó DK", code: "CD", flag: "🇨🇩", rank: 62 },
-        { name: "Honduras", code: "HN", flag: "🇭🇳", rank: 63 },
-        { name: "Burkina Faso", code: "BF", flag: "🇧🇫", rank: 64 },
+        { name: "Kongó DK", code: "CDK", flag: "🇨🇩", rank: 62 },
+        { name: "Honduras", code: "HON", flag: "🇭🇳", rank: 63 },
+        { name: "Burkina Faso", code: "BFA", flag: "🇧🇫", rank: 64 },
       ];
 
       const FMS = {
@@ -556,23 +556,23 @@
             { x: 0.38, y: 0.15, p: "CB" },
             { x: 0.62, y: 0.15, p: "CB" },
             { x: 0.85, y: 0.18, p: "RB" },
-            { x: 0.12, y: 0.38, p: "LM" },
-            { x: 0.37, y: 0.34, p: "CM" },
-            { x: 0.63, y: 0.34, p: "CM" },
-            { x: 0.88, y: 0.38, p: "RM" },
+            { x: 0.12, y: 0.40, p: "LM" },
+            { x: 0.37, y: 0.30, p: "CM" },
+            { x: 0.63, y: 0.30, p: "CM" },
+            { x: 0.88, y: 0.40, p: "RM" },
             { x: 0.35, y: 0.55, p: "ST" },
             { x: 0.65, y: 0.55, p: "ST" },
           ],
           a: [
-            { x: 0.5, y: 0.04, p: "GK" },
-            { x: 0.15, y: 0.30, p: "LB" },
-            { x: 0.38, y: 0.20, p: "CB" },
-            { x: 0.62, y: 0.20, p: "CB" },
-            { x: 0.85, y: 0.30, p: "RB" },
-            { x: 0.1, y: 0.65, p: "LM" },
-            { x: 0.35, y: 0.50, p: "CM" },
-            { x: 0.65, y: 0.50, p: "CM" },
-            { x: 0.9, y: 0.65, p: "RM" },
+            { x: 0.5, y: 0.10, p: "GK" },
+            { x: 0.15, y: 0.35, p: "LB" },
+            { x: 0.38, y: 0.30, p: "CB" },
+            { x: 0.62, y: 0.30, p: "CB" },
+            { x: 0.85, y: 0.35, p: "RB" },
+            { x: 0.1, y: 0.70, p: "LM" },
+            { x: 0.35, y: 0.60, p: "CM" },
+            { x: 0.65, y: 0.60, p: "CM" },
+            { x: 0.9, y: 0.70, p: "RM" },
             { x: 0.25, y: 0.80, p: "ST" },
             { x: 0.75, y: 0.80, p: "ST" },
           ],
@@ -2223,3 +2223,4 @@
     </script>
   </body>
 </html>
+
